docs: standardize documentation and remove obsolete code
- Resolve inconsistencies between README.md, AGENTS.md, and CLAUDE.md
- Add Java runtime requirements to README.md
- Update benchmark documentation to include both throughput and latency benchmarks
- Simplify README.md architecture section and reference detailed docs
- Streamline design principles for human readability
- Add cross-references between documentation files
- Remove obsolete MemrisTemplate.java stub method
- Add design decision about type-safe query methods